# GPT2

./: .dockerignore  .gitignore  DOCKER.md  Dockerfile  README.md  pyproject.toml  run-docker.sh
.github/workflows/: docker-build.yml
scripts/: train_gpu_lambda.sh
src/: train_gpt.py
src/checkpoints/: checkpoint.pt
src/data/: dataload.py
src/data_scripts/: dataload.py  fineweb.py  hellaswag.py
src/gpt_module/: block.py  casualattention.py  gpt.py  mlp.py
src/scripts/: train_gpu.py  train_gpu_lambda.sh  train_gpu_test_python_sdk.py
src/train.py/: train_gpt.py
src/training/: checkpointing.py  config.py  distributed.py  evaluate.py  train_gpt.py  trainer.py
