[project]
name = "gpt-repo"
version = "0.1.0"
description = "Build simple GPT2 Model"
readme = "README.md"
requires-python = ">=3.12.0"
dependencies = [
    "datasets>=3.5.1",
    "ipykernel>=6.29.5",
    "matplotlib>=3.10.1",
    "pandas>=2.2.3",
    "regex>=2024.11.6",
    "sentencepiece>=0.2.0",
    "tensorflow>=2.19.0",
    "tf-keras>=2.19.0",
    "tiktoken>=0.9.0",
    "torch>=2.7.0",
    "torchaudio>=2.7.0",
    "torchvision>=0.22.0",
    "transformers>=4.51.3",
    "paperspace>=0.2.0",
    "gradient==2.99.4",
    "nebius==0.2.57",
    "google-cloud-storage>=2.10.0"
]
[tool.uv]
prerelease = "allow"